<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>p2p-athena-parent</artifactId>
        <groupId>hsjry.p2p</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <packaging>war</packaging>

    <artifactId>p2p-athena-deploy</artifactId>

    <dependencies>
        <dependency>
            <groupId>hsjry.p2p</groupId>
            <artifactId>p2p-athena-facade-ref</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

    <!--logback 日志-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
        </dependency>
        <!--<dependency>-->
            <!--<groupId>org.slf4j</groupId>-->
            <!--<artifactId>slf4j-api</artifactId>-->
        <!--</dependency>-->
        <!--<dependency>-->
            <!--<groupId>ch.qos.logback</groupId>-->
            <!--<artifactId>logback-core</artifactId>-->
        <!--</dependency>-->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>org.logback-extensions</groupId>
            <artifactId>logback-ext-spring</artifactId>
            <scope>compile</scope>
        </dependency>

<!--单元测试-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>


    </dependencies>


    <build>
        <finalName>p2p-athena-deploy</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.5</version>
            </plugin>

            <plugin>
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <version>6.1.26</version>
                <configuration>
                    <connectors>
                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                            <port>8084</port>
                            <maxIdleTime>30000</maxIdleTime>
                        </connector>
                    </connectors>
                    <!-- 自动发现改变是时间，进行热部署，默认是0，不热部署 <scanIntervalSeconds>1</scanIntervalSeconds> -->
                    <webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>
                    <webAppConfig>
                        <contextPath>/athena</contextPath>
                    </webAppConfig>
                    <reload>automatic</reload>
                    <systemProperties>
                        <systemProperty>
                            <name>org.mortbay.util.URI.charset</name>
                            <value>UTF-8</value>
                        </systemProperty>
                    </systemProperties>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF8</encoding>
                </configuration>
            </plugin>

            <!--			 <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.12.4</version>
                        <configuration>
                            <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
                                        ${coverageAgent} -Dfile.encoding=UTF-8</argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                            <parallel>methods</parallel>
                            <threadCount>10</threadCount>
                             --><!--  是否跳过单元测试--><!--
                <skip>false</skip>
               <includes>
               	<include>**/RunnerMain.java</include>
               </includes>
            </configuration>
        </plugin>   -->


        </plugins>
    </build>
</project>